--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: BASiCS
 Type: Package
 Title: Bayesian Analysis of Single-Cell Sequencing data
-Version: 2.13.0
-Date: 2023-03-07
+Version: 2.13.2
+Date: 2023-06-26
 Authors@R: c(person("Catalina", "Vallejos", role=c("aut", "cre"),
         email="catalina.vallejos@igmm.ed.ac.uk",
         comment=c(ORCID = "0000-0003-3638-1960")), 
@@ -82,7 +82,7 @@ URL: https://github.com/catavallejos/BASiCS
 BugReports: https://github.com/catavallejos/BASiCS/issues
 RoxygenNote: 7.2.3
 Encoding: UTF-8
-LazyData: false
+LazyData: true
 Config/testthat/edition: 3
 Collate: 
     'AllClasses.R'
