--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: BASiCS
 Type: Package
 Title: Bayesian Analysis of Single-Cell Sequencing data
-Version: 2.13.2
+Version: 2.13.3
 Date: 2023-06-26
 Authors@R: c(person("Catalina", "Vallejos", role=c("aut", "cre"),
         email="catalina.vallejos@igmm.ed.ac.uk",
@@ -82,7 +82,7 @@ URL: https://github.com/catavallejos/BASiCS
 BugReports: https://github.com/catavallejos/BASiCS/issues
 RoxygenNote: 7.2.3
 Encoding: UTF-8
-LazyData: true
+LazyData: false
 Config/testthat/edition: 3
 Collate: 
     'AllClasses.R'
