--- a/NAMESPACE
+++ b/NAMESPACE
@@ -145,6 +145,7 @@ importFrom(stats,lag)
 importFrom(stats,lm)
 importFrom(stats,median)
 importFrom(stats,model.matrix)
+importFrom(stats,na.omit)
 importFrom(stats,quantile)
 importFrom(stats,rgamma)
 importFrom(stats,rlnorm)
